--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ python_requires = >=3.6
 install_requires =
     gradio
     vllm
+    sentence_transformers
 
 [options.packages.find]
 where = src
