--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = txagent
-version = 0.1.2
+version = 0.1.3
 description = TxAgent: An AI Agent for Therapeutic Reasoning Across a Universe of Tools
 author = Shanghua Gao
 author_email = shanghuagao@gmail.com
@@ -15,7 +15,7 @@ package_dir =
 python_requires = >=3.6
 install_requires =
     gradio
-    vllm
+    vllm<=0.8.4
     sentence_transformers
 
 [options.packages.find]
